[gd_scene load_steps=2 format=3 uid="uid://cmkv58mh7x0nh"]

[ext_resource type="Script" path="res://scripts/ui/dialogue_ui.gd" id="1_7ugsk"]

[node name="DialogueUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7ugsk")

[node name="DialoguePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 310.0
offset_top = -200.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="NameLabel" type="Label" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 11.0
offset_right = 295.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 20
text = "角色名称"
vertical_alignment = 1

[node name="TextLabel" type="RichTextLabel" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 45.0
offset_right = -20.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "这里是对话内容。点击继续或按空格键。"

[node name="ContinueIndicator" type="Label" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -43.0
offset_top = -40.0
offset_right = -20.0
offset_bottom = -17.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "▼"

[node name="PortraitPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -200.0
offset_right = 290.0
offset_bottom = -20.0
grow_vertical = 0

[node name="Portrait" type="TextureRect" parent="PortraitPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="ChoicesPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -327.0
offset_top = 270.0
offset_right = 327.0
offset_bottom = 476.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ChoicesPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="EmotionPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 210.0
grow_horizontal = 0

[node name="Title" type="Label" parent="EmotionPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 10.0
offset_right = 75.0
offset_bottom = 36.0
grow_horizontal = 2
text = "情感状态"
horizontal_alignment = 1

[node name="EmotionText" type="RichTextLabel" parent="EmotionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 40.0
offset_right = -15.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "喜悦: 45
悲伤: 30
好奇: 70

复合情绪:
希望: 56"

[node name="RelationshipPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 230.0
offset_right = -20.0
offset_bottom = 420.0
grow_horizontal = 0

[node name="Title" type="Label" parent="RelationshipPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 10.0
offset_right = 75.0
offset_bottom = 36.0
grow_horizontal = 2
text = "关系状态"
horizontal_alignment = 1

[node name="RelationshipText" type="RichTextLabel" parent="RelationshipPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 40.0
offset_right = -15.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "关系状态: 亲密关系 (65)

信任度: 65
理解度: 55
影响力: 30
依赖度: 60" 